# kukkuu

./: .dockerignore  .env.example  .env.keycloak.example  .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  azure-pipelines-build-devtest-review.yml  azure-pipelines-build-devtest.yml  azure-pipelines-build-prod.yml  azure-pipelines-build-stage.yml  azure-pipelines-build-staging.yml  azure-pipelines-devtest.yml  azure-pipelines-release.yml  azure-pipelines-review.yml  azure-pipelines-stageprod.yml  azure-pipelines-test.yml  compose.yaml  docker-compose.env.example  docker-compose.env.yaml.example  docker-compose.yml  docker-entrypoint.sh  k6LoadTests.js  manage.py  pyproject.toml  release-please-config.json  requirements-dev.in  requirements-dev.txt  requirements-not-from-pypi.txt  requirements-prod.txt  requirements.in  requirements.txt  setup.cfg  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  production.yml  release-please.yml  review.yml  staging.yml
.prod/: uwsgi.ini
browser-tests/: .env.example  package.json  tsconfig.json
browser-tests/report/: index.html
browser-tests/tests/: eventGroupFeature.ts  initialData.ts
children/: admin.py  apps.py  factories.py  models.py  notifications.py  schema.py
children/migrations/: 0001_initial.py  0002_remove_child_ssn.py  0003_change_relationship_point_to_guardian.py  0004_add_child_postal_code.py  0005_child_project.py  0006_add_languages_spoken_at_home.py  0007_alter_child_options.py  0008_alter_relationship_options.py  0009_remove_child_lastname.py  0010_rename_child_first_name_to_name.py  0011_child_birthdate_to_birthyear.py  0012_child_birthyear_to_integer.py  0013_alter_child_birthyear.py  0014_add_child_notes.py
children/tests/: mutations.py  queries.py  test_api.py  test_models.py  test_notifications.py
common/: decorators.py  models.py  notification_service.py  qrcode_service.py  schema.py  utils.py
common/templates/: notification_change_list.html
common/tests/: conftest.py  test_notification_service.py  test_qrcode_service.py  test_utils.py  utils.py
data/: default_languages.csv
django_ilmoitin/: utils.py
django_ilmoitin/migrations/: 0006_alter_notificationtemplate_admins_to_notify_and_more.py
docs/: setup-keycloak.md  setup-tunnistamo.md
events/: admin.py  apps.py  consts.py  enums.py  exceptions.py  factories.py  filters.py  models.py  notification_service.py  notifications.py  schema.py  ticket_service.py  utils.py
events/migrations/: 0001_initial.py  0002_add_translations_field.py  0003_modify_events_and_occurrences_table.py  0004_event_duration.py  0005_delete_old_duration_field.py  0006_add_enrolment_m2m_relationship.py  0006_add_integer_duration_field.py  0007_eventtranslation_image_alt_text.py  0008_alter_name_translation.py  0009_occurrence_occurrence_language.py  0010_event_project.py  0011_add_enrolment_attended.py  0012_upgrade_to_parler_2.py  0013_add_choice_child_and_1_or_2_guardians.py  0014_add_occurrence_capacity_override.py  0015_add_enrolment_reminder_sent_at.py  0016_add_event_group.py  0017_add_event_ready_for_event_group_publishing.py  0018_change_enrolment_child_nullable.py  0019_add_event_ticket_system.py  0020_add_occurrence_ticket_system_url.py  0021_nullable_capacity_per_occurrence.py  0022_add_ticket_system_password.py  0023_alter_enrolment_attended.py  0024_add_enrolment_feedback_notification_sent_at.py  0025_alter_enrolment_options.py  0026_add_event_ticket_system_url.py  0027_add_event_ticket_system_end_time.py  0028_alter_event_ticket_system.py  0029_alter_event_options.py  0030_add_tixly_ticket_system.py
events/tests/: mutations.py  queries.py  test_api.py  test_consts.py  test_models.py  test_notifications.py  test_ticket_service.py
gdpr/: README.md  models.py  service.py
gdpr/docs/: setup-helsinki-profile.md  (+4 more)
hel_django_auditlog_extra/: README.md  apps.py  context.py  graphene_decorators.py  middleware.py  mixins.py  services.py  utils.py
importers/: admin.py  notification_importer.py
kukkuu/: __init__.py  apps.py  auditlog_settings.py  consts.py  exceptions.py  graphene.py  middleware.py  notification_service.py  oidc.py  schema.py  service.py  settings.py  urls.py  utils.py  views.py
kukkuu_helusers_admin/: admin.py  apps.py
kukkuu_mailer/: apps.py
kukkuu_mailer_admin/: admin.py  apps.py
languages/: admin.py  models.py  schema.py
messaging/: admin.py  exceptions.py  factories.py  models.py  schema.py  service.py
notification_importers/: README.md  admin.py  csv_api.py  notification_importer.py  urls.py
pipelines/: kukkuu-api-dev.yml  kukkuu-api-release.yml  kukkuu-api-review.yml
projects/: admin.py  apps.py  consts.py  enums.py  factories.py  models.py  schema.py  utils.py
reports/: api.py  consts.py  drf_permissions.py  models.py  serializers.py
subscriptions/: README.md  factories.py  models.py  notifications.py  schema.py
users/: README.md  admin.py  apps.py  factories.py  models.py  notifications.py  schema.py  services.py  utils.py
venues/: admin.py  apps.py  factories.py  models.py  schema.py
verification_tokens/: admin.py  apps.py  decorators.py  factories.py  models.py
(+186 files in other folders)
