[project]
name = "kukkuu"
version = "3.14.1"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
# While `django-auditlog-extra` is installed directly from Github (instead of Pypi),
# it needs to be excluded, because otherwise CI-environment acts differently with the
# src -python path and it will fail while linting the code.
extend-exclude = ["snapshots", "django-auditlog-extra"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
]
extend-per-file-ignores = { "*/migrations/*" = ["E501"], "*/tests/*" = ["E501"] }

[tool.ruff.lint.isort]
# isort options for ruff:
# https://docs.astral.sh/ruff/settings/#lintisort
known-first-party = ["kukkuu"]

[tool.ruff.format]
docstring-code-format = true # Format code in docstrings

[tool.coverage.run]
# Coverage run options:
# https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
omit = ["*migrations*", "*site-packages*", "*venv*"]

[tool.pip-tools.compile]
strip-extras = true

[tool.pytest.ini_options]
# pytest-django options:
# https://pytest-django.readthedocs.io/en/latest/configuring_django.html
DJANGO_SETTINGS_MODULE = "kukkuu.settings"

# pytest options:
# https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
norecursedirs = ["node_modules", ".git", "venv*"]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]
